# mood-music-therapy

./: .env.example  .gitignore  CLAUDE.md  Explanation.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  paper.html
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/data/processed/: nepali_dataset.csv  nepali_dataset_500.csv
backend/demo/: librosa_demo.py
backend/models/: emotion_classifier_mlp_nepali.pkl  emotion_classifier_rf_nepali.pkl
backend/src/: api.py  collect_spotify_data.py  label_emotions.py  mood_parser.py  pipeline.py  process_features_csv.py  recommender.py  train_classifier.py
backend/src/classification/: classifier.py
backend/src/common/: features.py
backend/src/recommendation/: mood_parser.py  recommender.py
frontend/: .env.local.example  Dockerfile  app.py  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js
frontend/pages/: about.py
frontend/src/: App.jsx  App.tsx  index.css  types.ts  vite-env.d.ts
frontend/src/components/: ChatInterface.jsx  ClassifyTab.tsx  MoodInput.tsx  ResonanceMap.tsx  ResultsPanel.tsx  SongCard.tsx
frontend/src/hooks/: useChat.js  useClassify.ts  useRecommend.ts
frontend/src/lib/: emotions.ts
