[project]
name = "music-mood-backend"
version = "0.1.0"
description = "Music Mood Therapy — ML pipeline and CLI recommendation engine"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "openai>=1.30",
    "librosa>=0.10",
    "joblib>=1.4",
    "python-dotenv>=1.0",
    "spotipy>=2.23",
    "fastapi>=0.137.2",
    "uvicorn[standard]>=0.49.0",
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ipython>=8.0",
]
